--- a/Lunch/pages/lunch.html
+++ b/Lunch/pages/lunch.html
@@ -13,6 +13,13 @@
             <a href="/Lunch/lunch.html">Lunch</a>
             <a href="/Dinner/dinner.html"> Dinner</a>
             <br/>
+
+        <a href="../pages/carne-asada-tacos.html"><img src="../images/carne-asada-tacos.jpg" alt="carne asada tacos" height="200" width="150"></a>
+        <h2>Chicken Masala</h2>
+        <a href="../pages/hamburger-and-fries.html"><img src="../images/hamburger-and-fries.jpg" alt="hamburger and fries image" height="200" width="150"></a>
+        <h2>Tomato Basil Salad</h2>
+        <a href="../pages/spagetti.html"><img src="../images/spagetti.jpg" alt="spagetti image" height="200" width="150"></a>
+    
         </body>
     </html>
 </DOCTYPE>
