--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Tasty Recipes</h1>
         <img src="./chef.jpg" alt="Picture of a chef" height="300">
-        <h2><a href="/Breakfast/breakfast.html">Breakfast</a></h2>
+        <h2><a href="Breakfast/breakfast.html">Breakfast</a></h2>
         <h2><a href="Lunch/lunch.html">Lunch</a>
-        <h2><a href="/Dinner/dinner.html">Dinner</h2>
+        <h2><a href="Dinner/dinner.html">Dinner</h2>
     </body>
 </html>
