--- a/Dinner/dinner.html
+++ b/Dinner/dinner.html
@@ -8,10 +8,10 @@
     <body>
         <h1>Dinner Recipes</h1>
         <hr />
-        <a href="/index.html">Home</a>
-        <a href="/Breakfast/breakfast.html">Breakfast</a>
-        <a href="/Lunch/lunch.html">Lunch</a>
-        <a href="/Dinner/dinner.html">Dinner</a>
+        <a href="../index.html">Home</a>
+        <a href="../Breakfast/breakfast.html">Breakfast</a>
+        <a href="../Lunch/lunch.html">Lunch</a>
+        <a href="../Dinner/dinner.html">Dinner</a>
         <br/>
 
         <h2>Butternut Squash Soup</h2>
