--- a/Lunch/lunch.html
+++ b/Lunch/lunch.html
@@ -8,10 +8,10 @@
         <body>
             <h1>Lunch Recipes</h1>
             <hr />
-            <a href="/index.html">Home</a>
-            <a href="/Breakfast/breakfast.html">Breakfast</a>
-            <a href="/Lunch/lunch.html">Lunch</a>
-            <a href="/Dinner/dinner.html"> Dinner</a>
+            <a href="../index.html">Home</a>
+            <a href="../Breakfast/breakfast.html">Breakfast</a>
+            <a href="../Lunch/lunch.html">Lunch</a>
+            <a href="../Dinner/dinner.html"> Dinner</a>
             <br/>
             <h2>Carne Asada Tacos</h2>
                 <a href="/Lunch/pages/carne-asada-tacos.html"><<img src="../Lunch/images/carne-asada-tacos.jpg" alt="Carne Asada Tacos" height="200">
