--- a/Breakfast/breakfast.html
+++ b/Breakfast/breakfast.html
@@ -13,12 +13,12 @@
         <a href="../Lunch/lunch.html">Lunch</a>
         <a href="../Dinner/dinner.html">Dinner</a>
         <h2>Avocado Egg Toast</h2>
-        <a href="/Breakfast/pages/avocado-egg-toast.html"><img src="./images/avocado-egg-toast.jpg" alt="Avocado Toast Image" height="200" /></a>
+        <a href="pages/avocado-egg-toast.html"><img src="../Breakfast/images/avocado-egg-toast.jpg" alt="Avocado Toast Image" height="200" /></a>
         <br />
         <h2>French Toast with Blueberry and Banana Toppings</h2>
-        <a href="/Breakfast/pages/french-toast-with-blueberry-and-banana-toppings.html"><img src="/Breakfast/images/french-toast-with-blueberry-and-banana-toppings.jpg" alt="French toast with blueberry and banana toppings" height="200"/></a>
+        <a href="pages/french-toast-with-blueberry-and-banana-toppings.html"><img src="../Breakfast/images/french-toast-with-blueberry-and-banana-toppings.jpg" alt="French toast with blueberry and banana toppings" height="200"/></a>
         <br />
         <h2>Green Smoothie</h2>
-        <a href="/Breakfast/pages/green-smoothie.html"><img src="/Breakfast/images/green-smoothie.jpg" alt="Green Smoothie" height="200"></a>
+        <a href="pages/green-smoothie.html"><img src="../Breakfast/images/green-smoothie.jpg" alt="Green Smoothie" height="200"></a>
     </body>
 </html>
